Closed Bug 1464947 Opened 7 years ago Closed 7 years ago

display value logging in ReflowInput::DisplayInitFrameTypeExit is wrong

Categories

(Core :: Layout, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla62
Tracking Status
firefox62 --- fixed

People

(Reporter: heycam, Assigned: heycam)

Details

Attachments

(1 file)

It's become out of sync with the StyleDisplay enum values.
Comment on attachment 8981291 [details] Bug 1464947 - Fix ReflowInput::DisplayInitFrameTypeExit display type logging. https://reviewboard.mozilla.org/r/247394/#review253410 r+ Optional nits: (Could be done in a follow-up bug) ::: layout/style/nsStyleConsts.h:411 (Diff revision 1) > NS_STYLE_WRITING_MODE_SIDEWAYS_MASK) > > // See nsStyleDisplay > // > // NOTE: Order is important! If you change it, make sure to take a look at > // the FrameConstructorDataByDisplay stuff (both the XUL and non-XUL version), While you're here: It should be "FrameConstructionDataByDisplay" ('ion' instead of 'or'). ::: layout/style/nsStyleConsts.h:412 (Diff revision 1) > > // See nsStyleDisplay > // > // NOTE: Order is important! If you change it, make sure to take a look at > // the FrameConstructorDataByDisplay stuff (both the XUL and non-XUL version), > -// and ensure it's still correct! > +// and the displayTypes array in ReflowInput::DisplayInitFrameTypeExit, That's scary! Anyway there could be compile-time checks (at least that sizes match, it should catch most changes quickly), or a unit test to more thoroughly link all guilty parties?
Attachment #8981291 - Flags: review?(gsquelart) → review+
Comment on attachment 8981291 [details] Bug 1464947 - Fix ReflowInput::DisplayInitFrameTypeExit display type logging. https://reviewboard.mozilla.org/r/247394/#review253410 > That's scary! > Anyway there could be compile-time checks (at least that sizes match, it should catch most changes quickly), or a unit test to more thoroughly link all guilty parties? I meant "Any way"
The reflow logging is not performance critical, so I suppose we could just be looking up nsCSSProps::kDisplayKTable instead. Let me switch to that and put another patch up.
Attachment #8981291 - Flags: review+ → review?(gsquelart)
Comment on attachment 8981291 [details] Bug 1464947 - Fix ReflowInput::DisplayInitFrameTypeExit display type logging. https://reviewboard.mozilla.org/r/247394/#review253418 Thanks!
Attachment #8981291 - Flags: review?(gsquelart) → review+
Pushed by cam@mcc.id.au: https://hg.mozilla.org/integration/autoland/rev/f79ea1a6633d Fix ReflowInput::DisplayInitFrameTypeExit display type logging. r=gerald
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla62
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: