Bug 1464947 - Fix ReflowInput::DisplayInitFrameTypeExit display type logging. r=gerald

MozReview-Commit-ID: 4xPXJkys1so